# b64replace

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
gui/: .qmlls.ini  Cargo.toml  build.rs
gui/qml/: Main.qml
gui/src/: backend.rs  main.rs
